test/operator/less_or_equal_nonnum_num.lox
"1" <= 1 // error: binary operation only allowed between ints or floats
